--- a/java-maven/values.yaml
+++ b/java-maven/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 1
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
-  repository: 873330726955.dkr.ecr.ap-south-2.amazonaws.com/java-maven-image
+  repository: 873330726955.dkr.ecr.us-east-1.amazonaws.com/java-maven-image
   # This sets the pull policy for images.
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
